--- a/Startseite.css
+++ b/Startseite.css
@@ -1,16 +1,22 @@
+ .u-section-1 {
+  background-image: none;
+}
+
 .u-section-1 .u-sheet-1 {
-  min-height: 465px;
+  min-height: 443px;
 }
 
 .u-section-1 .u-gallery-1 {
-  height: 375px;
-  margin-top: 18px;
-  margin-bottom: 60px;
+  height: 396px;
+  width: 706px;
+  margin: 27px auto 20px;
 }
 
 .u-section-1 .u-carousel-indicators-1 {
   position: absolute;
   bottom: 10px;
+  width: auto;
+  height: auto;
 }
 
 .u-section-1 .u-carousel-item-1 {
@@ -19,7 +25,7 @@
 
 .u-section-1 .u-over-slide-1 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 20px;
+  padding: 30px;
 }
 
 .u-section-1 .u-carousel-item-2 {
@@ -28,7 +34,7 @@
 
 .u-section-1 .u-over-slide-2 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 20px;
+  padding: 30px;
 }
 
 .u-section-1 .u-carousel-item-3 {
@@ -37,7 +43,7 @@
 
 .u-section-1 .u-over-slide-3 {
   background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
-  padding: 20px;
+  padding: 30px;
 }
 
 .u-section-1 .u-carousel-control-1 {
@@ -55,73 +61,39 @@
 }
 
 @media (max-width: 1199px) {
-  .u-section-1 .u-carousel-control-1 {
-    padding: 4px;
-  }
-
-  .u-section-1 .u-carousel-control-2 {
-    padding: 4px;
-  }
-} .u-section-2 {
-  background-image: none;
-  background-position: 50% 50%;
-}
-
-.u-section-2 .u-sheet-1 {
-  min-height: 264px;
-}
-
-.u-section-2 .u-group-1 {
-  min-height: 122px;
-  height: auto;
-  width: 1140px;
-  margin: 13px auto 60px;
-}
-
-.u-section-2 .u-container-layout-1 {
-  padding-left: 30px;
-  padding-right: 30px;
-}
-
-.u-section-2 .u-audio-1 {
-  width: 500px;
-  height: 102px;
-  margin: 10px auto 0;
-}
-
-@media (max-width: 1199px) {
-  .u-section-2 .u-group-1 {
-    width: 940px;
-    height: auto;
-  }
-}
-
-@media (max-width: 991px) {
-  .u-section-2 .u-group-1 {
-    width: 720px;
+  .u-section-1 .u-sheet-1 {
+    min-height: 422px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-2 .u-group-1 {
+  .u-section-1 .u-gallery-1 {
     width: 540px;
-  }
-
-  .u-section-2 .u-container-layout-1 {
-    padding-left: 10px;
-    padding-right: 10px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-2 .u-group-1 {
+  .u-section-1 .u-gallery-1 {
     width: 340px;
   }
+} .u-section-2 {
+  background-image: none;
+}
 
+.u-section-2 .u-sheet-1 {
+  min-height: 604px;
+}
+
+.u-section-2 .u-audio-1 {
+  width: 500px;
+  height: 111px;
+  background-image: none;
+  --radius: 11px;
+  margin: 17px auto 60px;
+}
+
+@media (max-width: 575px) {
   .u-section-2 .u-audio-1 {
-    width: 320px;
+    width: 340px;
   }
-}.audio {
-	position: fixed;
-	bottom: 0;
 }
