--- a/Podcast/Startseite.css
+++ b/Podcast/Startseite.css
@@ -3,13 +3,13 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 450px;
+  min-height: 443px;
 }
 
 .u-section-1 .u-gallery-1 {
   height: 396px;
   width: 706px;
-  margin: 27px auto;
+  margin: 27px auto 20px;
 }
 
 .u-section-1 .u-carousel-indicators-1 {
@@ -64,11 +64,6 @@
   .u-section-1 .u-sheet-1 {
     min-height: 422px;
   }
-
-  .u-section-1 .u-gallery-1 {
-    margin-top: 13px;
-    margin-bottom: 13px;
-  }
 }
 
 @media (max-width: 767px) {
@@ -86,7 +81,7 @@
 }
 
 .u-section-2 .u-sheet-1 {
-  min-height: 213px;
+  min-height: 604px;
 }
 
 .u-section-2 .u-audio-1 {
